Replaced Zend_Config with Zend\Config

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 TODO LIST
 =========
 
+* finish including $basePath in template and check they work as expected. 
 * images folder should be moved to the public folder.
 
 * Zend\Json is really deprecated is it is not used in the code.
