--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 TODO LIST
 =========
 
-* finish including $basePath in template and check they work as expected. 
-* images folder should be moved to the public folder.
-
-* Zend\Json is really deprecated is it is not used in the code.
+* Eway and PayPal should be removed from core and inserted as extensions. 
+  It's impossible to debug this libraries if you don't have an account.
+  So they should only be available as extensions.
